# gdrive-ownership-transfer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  demo.tape  noxfile.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml  security.yml
scripts/: check_conventional_commit.py
src/gdrive_ownership_transfer/: __init__.py  cli.py  conventional_commits.py
tests/: test_check_conventional_commit_script.py  test_cli_helpers.py  test_cli_main.py  test_conventional_commits.py  test_entrypoints.py
