[project]
name = "gdrive-ownership-transfer"
version = "0.1.0"
description = "Bulk initiate and accept Google Drive ownership transfers inside a shared folder tree."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MarshallTech81" },
]
dependencies = [
  "google-api-python-client>=2.170.0",
  "google-auth-oauthlib>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/marshalltech81/gdrive-ownership-transfer"
Issues = "https://github.com/marshalltech81/gdrive-ownership-transfer/issues"

[dependency-groups]
dev = [
  "bandit[toml]>=1.9.4",
  "mypy>=1.15.0",
  "pip-audit>=2.9.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.9",
]

[project.scripts]
gdrive-ownership-transfer = "gdrive_ownership_transfer.cli:main"

[tool.uv]
required-version = "==0.11.6"
default-groups = ["dev"]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-q --cov=gdrive_ownership_transfer --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.run]
branch = true
source = ["gdrive_ownership_transfer"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
targets = ["src"]
